# data_import_modules

./: .gitignore  ErrorHandler.py  LICENSE  README.md  Wibs.py  ccs811.py  drone.py  fluoreszenz.py  lowcostsensors.py  pops.py  pyproject.toml  requirements.txt  sen55.py  setup.py  wibs.py
agg_dim/: ErrorHandler.py  __init__.py  drone.py  fluoreszenz.py  lowcostsensors.py  particle_counters.py  pops.py  weather.py  wibs.py
agg_dim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_import_modules/: drone.py
data_import_modules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docu/: docu.md  pypi_descr.md
