[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_import_modules"  # Your package name
version = "0.1.0"           # Initial version
description = "A collection of data import modules for the Lab on a Drone project." # Short description
authors = [{ name = "matrup01"},{name = "Florian Wieland", email = "wie-flo.waffle918@8shield.net"}] # Your info
readme = "README.md"
requires-python = ">=3.12"   # Minimum Python version
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["data_import_modules"]

[project.urls]
"Homepage" = "https://github.com/matrup01/data_import_modules/" # Your GitHub URL
"Bug Tracker" = "https://github.com/matrup01/data_import_modules/issues"